# Unified-AI-Project

./: .dockerignore  .editorconfig  .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .simple_fix_baseline.json  2Windows PowerShell.txt  ACTUAL_TEST_EXECUTION_PLAN.md  AGENTS.md  AGI_COMPREHENSIVE_ANALYSIS_REPORT.md  AGI_LEVEL_ASSESSMENT_REPORT.md  AGI_MODULE_ASSESSMENT_BASED_ON_ACTUAL_CODE.md  AGI_PROJECT_COMPREHENSIVE_REPAIR_PLAN.md  AGI_REPAIR_PROGRESS_REPORT.md  ANCHORED_SUMMARY.md  ANCHOR_LEARNING_PLAN.md  ANGELA_AXIS_AUDIT_v6.2.5.md  ANGELA_CARD_INTEGRATION_PLAN.md  ANGELA_EVOLUTION_REGISTRY.md  ANGELA_MATRIX_ANNOTATION_GUIDE.md  ANGELA_MATRIX_ANNOTATION_PROGRESS.md  ANGELA_PREREQUISITE_FOUNDATION.md  ANGELA_REPL_INTEGRATION_PLAN_v6.2.5.md  ANGELA_REPL_v6.2.5_TECHNICAL_REPORT.md  ANGELA_STATUS.md  ANGELA_SYSTEM_AUDIT_v6.2.5.md  ANGELA_TASK_BOOK.md  API_Implementation_Issues.md  API_STATUS_REPORT.md  API_TEST_ANALYSIS_REPORT.md  AUDIO_SERVICE_FIX_REPORT.md  AngelaLauncher.bat  BACKUP_RECOVERY_STANDARD_PROCEDURE.md  BACKUP_RECOVERY_TASK_LIST.md  BACKUP_SUMMARY_20250903.md  (+906 more)
apps/backend/: .coverage  .coverage.ASUS-BR1100FKA.23148.XpFvSFTx  .env  .env.example  AUTO_FIX_ISSUE_RESOLUTION.md  CONTENT_ANALYSIS_MODULE_TEST_FIXES_SUMMARY.md  Dockerfile  FIX_SUMMARY.md  MANIFEST.in  README.md  TEST_FIXES_SUMMARY.md  agi_integration_test_report_20250823_210157.txt  agi_integration_test_report_20250823_210204.txt  agi_integration_test_report_20250823_210704.txt  agi_integration_test_report_20250823_210752.txt  agi_integration_test_report_20250823_210909.txt  agi_integration_test_report_20250823_210928.txt  agi_integration_test_report_20250824_152621.txt  alpha_deep_model_symbolic_space.db  analyze_imports.py  angela_memory.json  check_ham_methods.py  check_matcher_patterns.py  check_patterns.py  check_person_title.py  check_person_title_v2.py  check_query_core_memory.py  collect_output.txt  crisis_log.txt  debug_based_in.py  debug_content_analyzer.py  debug_content_analyzer_detailed.py  debug_content_analyzer_issues.py  debug_detailed.py  debug_detailed_analysis.py  debug_matcher.py  debug_matcher_patterns.py  debug_mock.py  debug_mock_v2.py  debug_patch_test.py  (+80 more)
apps/backend/chroma_db/: chroma.sqlite3
apps/backend/chromadb/: __init__.py  config.py
apps/backend/chromadb_local/: __init__.py  config.py
apps/backend/config/: credentials.example.json
apps/backend/configs/: api_keys.yaml  atlassian_config.yaml  bootstrap_config.yaml  chromadb_config.json  config.yaml  crisis_system_config.json  demo_credentials.yaml  dependency_config.yaml  hsp_fallback_config.yaml  multi_llm_config.json  system_config.yaml  test_config.yaml  version_manifest.json
apps/backend/context_storage/: 0d7990dd-d55f-49fb-abe4-ce56f3e37c42.json  14a9f771-b4bc-4d6e-9d1e-99e726340932.json  1fc4eb61-694b-4122-bb36-3f8d71b5964f.json  2ed7a582-137b-4ac5-ae20-e4e82c03ef21.json  33d640a5-9984-4cfc-a809-85eea1d92569.json  351af36e-5f1c-4b40-bc27-703aacfcae6c.json  38bece0c-1fb9-402f-b271-4257e3cec626.json  56465a40-2756-47ca-af9a-e9bc290dec45.json  58c32aa3-59b3-4a2e-883c-0ac0216f4bfe.json  59bf28c6-c910-493c-86be-25c722819571.json  6842ae83-c9a4-46a2-af35-b03f8e770536.json  71fb4b6c-4465-422c-a917-a5a606d60ddb.json  7ad10be0-5dc2-4c72-996f-7993050057c5.json  96ed16a1-6dc6-4f8f-9bfd-e3c8fe7c9621.json  9a8ed8ad-b93b-428b-9874-c919336a7659.json  a0f5702a-6f80-4395-b5be-225ce7e343a8.json  b394787e-6c9b-4d34-ada9-bd8697cfadcf.json  bd4feb32-5520-4321-a613-3397bb80c86d.json  c561719a-d88b-46ab-b522-468915d04818.json  cb202bc6-41dd-4e4d-af32-44b6ad532c14.json  d0fff84f-126f-4ba5-9bfc-557b84dfb32b.json  dc4e551b-9209-4c3d-b528-951a8de12559.json  e4635b72-aa62-48ec-960f-4ad3e6714331.json  f9ebac6e-a459-4041-98f2-68a923c44326.json
apps/backend/debug/: debug_based_in.py  debug_based_in.py.bak2  debug_content_analyzer.py  debug_content_analyzer_detailed.py  debug_content_analyzer_detailed.py.bak2  debug_content_analyzer_issues.py  debug_content_analyzer_issues.py.bak2  debug_detailed.py  debug_detailed.py.bak2  debug_detailed_analysis.py  debug_detailed_analysis.py.bak2  debug_matcher.py  debug_matcher.py.bak2  debug_matcher_patterns.py  debug_matcher_patterns.py.bak2  debug_mock.py  debug_mock.py.bak2  debug_mock_v2.py  debug_mock_v2.py.bak2  debug_person_title.py  debug_person_title.py.bak2  debug_person_title_pattern.py  debug_person_title_pattern.py.bak2  debug_relationship_extraction.py  debug_relationship_extraction.py.bak2  debug_relationships.py  debug_relationships.py.bak2  debug_relationships_v2.py  debug_relationships_v2.py.bak2  debug_simple.py  debug_simple.py.bak2  debug_spacy.py  detailed_debug.py  detailed_debug.py.bak2  diagnose_components.py  simple_debug.py
apps/backend/docs/: compatibility_fix_plan.md
apps/backend/reports/: backend-tests.xml
apps/backend/schemas/: HSP_Acknowledgement_v0.1.schema.json  HSP_CapabilityAdvertisement_v0.1.schema.json  HSP_Fact_v0.1.schema.json  HSP_TaskRequest_v0.1.schema.json  HSP_TaskResult_v0.1.schema.json
apps/backend/scripts/: COMPLETION_REPORT.md  README.md  README_separated_test_fix.md  USAGE_GUIDE.md  advanced_auto_fix.py  analyze_failures.py  analyze_failures.py.bak2  auto_fix.bat  auto_fix.sh  auto_fix_complete.py  auto_fix_imports.py  automated_integration_test_pipeline.py  benchmark_baseline.py  clean_old_backups.py  clean_old_backups.py.bak2  cleanup_backup_dirs.py  cleanup_backup_dirs.py.bak2  continuous_test_improvement.py  coverage_analyzer.py  coverage_analyzer.py.bak2  coverage_monitor.py  coverage_monitor.py.bak2  demo_test_result_processing.py  enhanced_auto_fix.py  error_analyzer.py  execute_smart_fix.py  execute_smart_fix.py.bak2  export_openapi.py  final_import_fix.py  final_import_fix.py.bak2  final_validation.py  final_validation.py.bak2  fix_executor.py  fix_import_paths.py  fix_import_paths.py.bak2  generate_test_report.py  health_check_service.py  integration_fixer.py  integration_fixer.py.bak2  integration_test.py  (+35 more)
apps/backend/src/: __init__.py  angela_memory.json  (+14 more)
(+8624 files in other folders)
