[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-ai-project-root"
version = "7.5.0-dev"
description = "Unified AI Project - root monorepo configuration"
requires-python = ">=3.10"

[tool.black]
# Black - Python 代码格式化工具
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | \.pytest_cache
)/
'''

[tool.isort]
# isort - Python import 排序工具
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = ['venv', '.venv', 'build', 'dist']
known_first_party = ['angela', 'apps', 'packages']
known_third_party = ['fastapi', 'uvicorn', 'pydantic', 'numpy', 'pandas', 'torch', 'tensorflow']

[tool.bandit]
# bandit - Python 安全静态分析
exclude_dirs = ['tests', 'venv', '.venv', 'build', 'dist', 'node_modules', 'migrations']
# 允许项目风格: B101(assert), B110(broad except), B311(random), B403(pickle)
skips = ['B101', 'B110', 'B311', 'B403', 'B404', 'B601']

[tool.safety]
# safety - Python 依赖安全审计
ignore = []
output = "text"

[tool.mypy]
# mypy - Python 类型检查工具
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 暂时允许未类型化的函数
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    'venv',
    '.venv',
    'build',
    'dist',
    'node_modules',
    'migrations',
]

[[tool.mypy.overrides]]
# 特定模块的类型检查配置
module = [
    'fastapi.*',
    'uvicorn.*',
    'pydantic.*',
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# pytest - Python 测试框架配置
testpaths = ['tests', 'apps/backend/tests', 'scripts']
python_files = ['test_*.py', '*_test.py']
python_classes = ['Test*']
python_functions = ['test_*']
filterwarnings = [
    # Let DeprecationWarning through so deprecated API usage is visible
    # during test runs. Individual noisy entries can be added below.
    # 'ignore::DeprecationWarning',  # removed: hide real deprecation issues
    # 'ignore::PendingDeprecationWarning',  # removed
]
addopts = [
    '-v',
    '--strict-markers',
    '--strict-config',
    '--tb=short',
    '--disable-warnings',
]
norecursedirs = [
    '.git',
    '.tox',
    'dist',
    'build',
    '*.egg',
    '__pycache__',
    '.pytest_cache',
    'node_modules',
    'auto_fix_*',
]
markers = [
    'slow: marks tests as slow (deselect with -m not slow)',
    'integration: marks tests as integration tests',
    'unit: marks tests as unit tests',
    'asyncio: marks tests as async tests',
    'online: marks tests that require an internet connection',
    'mcp: marks tests related to MCP functionality',
    'context7: marks tests related to Context7 integration',
    'ai_core: marks tests for core AI functionality',
    'timeout: marks tests with a timeout',
    'flaky: marks tests as flaky (random failures)',
    'system_integration: marks tests for system integration',
    'performance: marks tests for performance benchmarking',
    'benchmark: marks tests as benchmark tests',
    'e2e: marks end-to-end scenario tests',
]
asyncio_mode = 'auto'
asyncio_default_test_loop_scope = 'function'
junit_family = 'xunit2'

[tool.coverage.run]
# coverage - Python 测试覆盖率配置
source = ['apps/backend/src']
omit = [
    '*/tests/*',
    '*/test_*.py',
    '*/__pycache__/*',
    '*/migrations/*',
    '*/venv/*',
    '*/.venv/*',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@abstractmethod',
]
precision = 2
