[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "unified-ai-project"
version = "0.1.0"
description = "A unified AI project with modular architecture and optional dependencies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.21.0",
  "cryptography>=3.4.0",
  "requests>=2.25.0",
  "python-dotenv>=0.19.0",
  "PyYAML>=6.0",
  "typing-extensions>=4.0.0",
  "paho-mqtt>=1.6.0",
  "networkx>=2.6.0",
  "psutil>=5.8.0",
  "faiss-cpu>=1.7.0",
  "sentence-transformers>=2.2.0",
  "gmqtt>=0.7.0",
  "rich>=13.0.0",
  "click>=8.0.0",
  "tqdm>=4.64.0",
  "firebase-admin>=6.0.0",
  "httpx>=0.23.0",
  "Pillow>=9.0.0",
  "aiohttp>=3.8.0",
  "python-dotenv>=0.19.0",
  "edge-tts>=6.1.9",
  "py-cpuinfo>=9.0.0",
  "cryptography>=41.0.0",
]

[[project.authors]]
name = "Unified AI Project Team"

[project.license]
text = "MIT"

[project.optional-dependencies]
minimal = [
  "numpy",
  "cryptography",
  "requests",
  "python-dotenv",
  "PyYAML",
  "typing-extensions",
  "paho-mqtt",
  "networkx",
  "psutil",
  "pandas",
  "scikit-learn",
]
standard = [
  "numpy",
  "cryptography",
  "requests",
  "python-dotenv",
  "PyYAML",
  "typing-extensions",
  "paho-mqtt",
  "networkx",
  "psutil",
  "pandas",
  "scikit-learn",
  "fastapi",
  "uvicorn",
  "pydantic",
  "httpx",
  "chromadb",
]
full = [
  "numpy",
  "cryptography",
  "requests",
  "python-dotenv",
  "PyYAML",
  "typing-extensions",
  "paho-mqtt",
  "networkx",
  "psutil",
  "pandas",
  "scikit-learn",
  "tensorflow",
  "ml-dtypes~=0.3.1",
  "tensorboard<2.17,>=2.16",
  "spacy",
  "fastapi",
  "uvicorn",
  "pydantic",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "aiounittest",
  "pygame",
  "PyQt5",
  "pyshortcuts",
  "secret-sharing",
  "qrcode",
  "beautifulsoup4",
  "github3.py",
  "scikit-image",
  "SpeechRecognition",
  "faiss-cpu",
  "sentence-transformers",
  "huggingface-hub",
  "transformers",
]
ai_focused = [
  "numpy",
  "cryptography",
  "requests",
  "python-dotenv",
  "PyYAML",
  "typing-extensions",
  "paho-mqtt",
  "networkx",
  "psutil",
  "pandas",
  "scikit-learn",
  "tensorflow",
  "spacy",
  "sentence-transformers",
  "huggingface-hub",
  "transformers",
]
game = [
  "numpy",
  "cryptography",
  "requests",
  "python-dotenv",
  "PyYAML",
  "typing-extensions",
  "paho-mqtt",
  "networkx",
  "psutil",
  "pygame",
  "pandas",
  "scikit-learn",
]
installer = [
  "PyQt5",
  "pyshortcuts",
  "secret-sharing",
  "qrcode",
]
testing = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-timeout",
  "aiounittest",
  "astunparse",
  "cryptography",
  "aiohttp",
  "python-dotenv",
  "paho-mqtt",
  "pandas",
  "scikit-learn",
  "spacy",
  "gmqtt",
  "pygame",
  "amqtt",
  "fastapi",
  "httpx",
  "uvicorn",
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/catcatAI/Unified-AI-Project"
"Bug Tracker" = "https://github.com/catcatAI/Unified-AI-Project/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
